HDDS-14443. Documentation and Scripting Inconsistencies for Ozone Environment Variables (#10352)